# minerva-desktop

./: .gitignore  AFTER_REBOOT_TODO.md  DEVELOPMENT.md  LICENSE  README.md  RELEASE_NOTES.md  SIGNING_KEY.md  UNINSTALL.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: audit.yml  licenses.yml  release.yml
scripts/: run-debug.ps1  zoom-windows.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  about.hbs  about.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: agenda.json  coaching.json  default.json  focus-goals.json  icon-key.json  overlay.json  panel.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  error_chain.rs  http_client.rs  lib.rs  main.rs  presence.rs  process_detector.rs  socket_proxy.rs  tray.rs  zoom_url_cache.rs
src/components/: AgendaWindow.tsx  AuthPrompt.tsx  CoachingIcon.tsx  CoachingWindow.tsx  FocusGoalsWindow.tsx  IconKeyWindow.tsx  Overlay.tsx  OverlayWindow.tsx  PanelWindow.tsx  StatusIndicator.tsx
src/components/overlay/: BehaviorStations.tsx  FloatingIcon.tsx
src/components/panel/: AboutModal.tsx  AccountStatus.tsx  CoachingTipCard.tsx  CompanionIntroBanner.tsx  ConnectPlatformGate.tsx  ConnectionIssueModal.tsx  CoreBehaviorSkillsPanel.tsx  CoreMeetingSkills.tsx  DevMode.tsx  Gauges.tsx  InviteSection.tsx  MacosPermissionGate.tsx  PasteLinkModal.tsx  PostMeetingModal.tsx  ReleaseNotesModal.tsx  WelcomeComplete.tsx
src/constants/: behaviors.ts  coaching_tips.ts
src/contexts/: updater-context.tsx
src/hooks/: use-auth.ts  use-calendar-status.ts  use-coaching-messages.ts  use-connected-accounts.ts  use-dev-events.ts  use-feature-state.ts  use-font-scale.ts  use-meeting-status.ts  use-presence.ts  use-socket.ts  use-updater.ts  use-welcome-acknowledged.ts
src/lib/: api.ts
src/types/: coaching.ts
