[package]
name = "minerva-desktop"
version = "0.1.12"
description = "Minerva Coach Desktop Overlay"
authors = ["Minerva Research Inc"]
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "minerva_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
url = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
open = "5"
rust_socketio = { version = "0.6", features = ["async"] }
native-tls = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
core-graphics = "0.25"
core-foundation = "0.10"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
