[package]
name = "minerva-desktop"
version = "0.1.18"
description = "Minerva Coach Desktop Overlay"
authors = ["Minerva Research Inc"]
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "minerva_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
# rustls-tls-native-roots: pure-Rust TLS that reads system trust roots (Keychain
# on macOS, Schannel store on Windows, /etc/ssl on Linux). Replaces the default
# native-tls path because on macOS that routes through SecureTransport, which
# Apple deprecated in 10.15 and has bit-rotted to the point that TLS 1.3
# handshakes against Cloudflare-fronted hosts (incl. minervacoach.com) fail
# with "bad protocol version" on Sequoia and Tahoe. Apple's own bundled curl
# on Sequoia is MultiSSL and prefers LibreSSL over SecureTransport for the
# same reason. Verified: curl + Safari succeed against minervacoach.com from
# a fresh Sequoia VM where our native-tls reqwest fails identically to a
# Tahoe end user.
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "charset", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
url = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
core-graphics = "0.25"
core-foundation = "0.10"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
# WMI event subscription on Win32_Process creation. Used solely to snapshot
# the launcher Zoom.exe's command line before it dies (a few hundred ms),
# which is the only source of the zoommtg:// URL when Zoom is already
# running in the tray when the user clicks an invite link.
wmi = "0.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
# Emit a PDB so crash dumps from shipped builds can be symbolicated.
# `strip = true` keeps the shipped exe small; debug info lives in the
# separate .pdb that CI uploads as a workflow artifact.
debug = "full"
split-debuginfo = "packed"
